--- a/MVC5-Otomasyon/MVC5-Otomasyon/MVC5-Otomasyon.csproj
+++ b/MVC5-Otomasyon/MVC5-Otomasyon/MVC5-Otomasyon.csproj
@@ -133,6 +133,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\KategoriController.cs" />
+    <Compile Include="Controllers\UrunController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -661,6 +662,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Kategori\Kategoribring.cshtml" />
+    <Content Include="Views\Urun\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
